contrast fixed

--- a/final-project/css/large.css
+++ b/final-project/css/large.css
@@ -20,7 +20,6 @@
 
 		.text-logo {
 			margin-left: 1rem;
-			color: #e9423c;
 		}
 
 		.hero-message {
