--- a/final-project/css/medium.css
+++ b/final-project/css/medium.css
@@ -2,7 +2,6 @@
 
 	.text-logo {
 		margin-left: 1.8rem;
-		color: #e9423c;
 	}
 
 
